syntax = "proto3";
import "Vector3.proto";

package Protocol;

message EnterSceneRes{
	int32 result = 1;
	string sceneName = 2;
	Vector3 position = 3;
}