syntax = "proto3";

package Protocol;
message LoginReq {
  string email = 1;
  string password= 2;
}